test_outputs/connlist/onlineboutique_workloads_with_ingress_explain_output.txt

##########################################
# Specific connections and their reasons #
##########################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/frontend[Deployment]:

DENIED TCP:[1-8079,8081-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED TCP:[8080] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend-netpol // Ingress rule #1

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/frontend[Deployment]:

DENIED TCP:[1-8079,8081-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED TCP:[8080] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend-netpol // Ingress rule #1

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/cartservice[Deployment]:

ALLOWED TCP:[7070] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice-netpol // Egress rule #1
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/cartservice-netpol // Ingress rule #1

DENIED TCP:[1-7069,7071-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress rule #1 (ports not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress rule #1 (protocols not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/currencyservice[Deployment]:

ALLOWED TCP:[7000] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice-netpol // Egress rule #2
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/currencyservice-netpol // Ingress rule #1

DENIED TCP:[1-6999,7001-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress rule #2 (ports not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress rule #2 (protocols not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/emailservice[Deployment]:

ALLOWED TCP:[8080] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice-netpol // Egress rule #3
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/emailservice-netpol // Ingress rule #1

DENIED TCP:[1-8079,8081-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress rule #3 (ports not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress rule #3 (protocols not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/frontend[Deployment]:

DENIED TCP:[1-8079,8081-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED TCP:[8080] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend-netpol // Ingress rule #1

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/paymentservice[Deployment]:

ALLOWED TCP:[50051] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice-netpol // Egress rule #4
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/paymentservice-netpol // Ingress rule #1

DENIED TCP:[1-50050,50052-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress rule #4 (ports not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress rule #4 (protocols not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/productcatalogservice[Deployment]:

ALLOWED TCP:[3550] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice-netpol // Egress rule #5
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/productcatalogservice-netpol // Ingress rule #1

DENIED TCP:[1-3549,3551-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress rule #5 (ports not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress rule #5 (protocols not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/shippingservice[Deployment]:

ALLOWED TCP:[50051] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice-netpol // Egress rule #6
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/shippingservice-netpol // Ingress rule #1

DENIED TCP:[1-50050,50052-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress rule #6 (ports not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress rule #6 (protocols not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/frontend[Deployment]:

DENIED TCP:[1-8079,8081-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED TCP:[8080] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend-netpol // Ingress rule #1

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/frontend[Deployment]:

DENIED TCP:[1-8079,8081-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED TCP:[8080] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend-netpol // Ingress rule #1

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/adservice[Deployment]:

ALLOWED TCP:[9555] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend-netpol // Egress rule #1
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/adservice-netpol // Ingress rule #1

DENIED TCP:[1-9554,9556-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Egress rule #1 (ports not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Egress rule #1 (protocols not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/cartservice[Deployment]:

ALLOWED TCP:[7070] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend-netpol // Egress rule #2
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/cartservice-netpol // Ingress rule #2

DENIED TCP:[1-7069,7071-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Egress rule #2 (ports not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Ingress rule #2 (ports not referenced by the rule)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Egress rule #2 (protocols not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Ingress rule #2 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/checkoutservice[Deployment]:

ALLOWED TCP:[5050] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend-netpol // Egress rule #3
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/checkoutservice-netpol // Ingress rule #1

DENIED TCP:[1-5049,5051-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Egress rule #3 (ports not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Egress rule #3 (protocols not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/currencyservice[Deployment]:

ALLOWED TCP:[7000] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend-netpol // Egress rule #4
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/currencyservice-netpol // Ingress rule #2

DENIED TCP:[1-6999,7001-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Egress rule #4 (ports not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Ingress rule #2 (ports not referenced by the rule)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Egress rule #4 (protocols not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Ingress rule #2 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/productcatalogservice[Deployment]:

ALLOWED TCP:[3550] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend-netpol // Egress rule #5
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/productcatalogservice-netpol // Ingress rule #2

DENIED TCP:[1-3549,3551-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Egress rule #5 (ports not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Ingress rule #2 (ports not referenced by the rule)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Egress rule #5 (protocols not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Ingress rule #2 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/recommendationservice[Deployment]:

ALLOWED TCP:[8080] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend-netpol // Egress rule #6
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/recommendationservice-netpol // Ingress rule #1

DENIED TCP:[1-8079,8081-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Egress rule #6 (ports not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Egress rule #6 (protocols not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/shippingservice[Deployment]:

ALLOWED TCP:[50051] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend-netpol // Egress rule #7
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/shippingservice-netpol // Ingress rule #2

DENIED TCP:[1-50050,50052-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Egress rule #7 (ports not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Ingress rule #2 (ports not referenced by the rule)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Egress rule #7 (protocols not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Ingress rule #2 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/frontend[Deployment]:

ALLOWED TCP:[8080] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/loadgenerator-netpol // Egress rule #1
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend-netpol // Ingress rule #1

DENIED TCP:[1-8079,8081-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Egress rule #1 (ports not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Egress rule #1 (protocols not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/frontend[Deployment]:

DENIED TCP:[1-8079,8081-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED TCP:[8080] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend-netpol // Ingress rule #1

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/frontend[Deployment]:

DENIED TCP:[1-8079,8081-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED TCP:[8080] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend-netpol // Ingress rule #1

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/frontend[Deployment]:

DENIED TCP:[1-8079,8081-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED TCP:[8080] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend-netpol // Ingress rule #1

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/productcatalogservice[Deployment]:

ALLOWED TCP:[3550] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED)
		1) [NP] default/recommendationservice-netpol // Egress rule #1
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/productcatalogservice-netpol // Ingress rule #3

DENIED TCP:[1-3549,3551-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Egress rule #1 (ports not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Ingress rule #3 (ports not referenced by the rule)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Egress rule #1 (protocols not referenced by the rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Ingress rule #3 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/redis-cart[Deployment] => default/frontend[Deployment]:

ALLOWED TCP:[8080] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend-netpol // Ingress rule #1

DENIED TCP:[1-8079,8081-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/frontend[Deployment]:

DENIED TCP:[1-8079,8081-65535] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED TCP:[8080] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED)
		1) [NP] default/frontend-netpol // Ingress rule #1

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (protocols not referenced by the rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN {ingress-controller} => default/frontend[Deployment]:

ALLOWED TCP:[8080] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [Ingress] default/onlineboutique-ingress // service frontend-external
		2) [NP] default/frontend-netpol // Ingress rule #1

DENIED TCP:[1-8079,8081-65535] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (ports not referenced by the rule)

DENIED {SCTP,UDP}:[ALL PORTS] due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress rule #1 (protocols not referenced by the rule)


####################################
# No Connections and their reasons #
####################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/cartservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/currencyservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/frontend[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/loadgenerator[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Ingress (captured but not selected by any Ingress rule - no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/productcatalogservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => default/shippingservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => 0.0.0.0-255.255.255.255:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/cartservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/currencyservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/loadgenerator[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Ingress (captured but not selected by any Ingress rule - no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/productcatalogservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/redis-cart[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/adservice[Deployment] => default/shippingservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => 0.0.0.0-255.255.255.255:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/currencyservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/loadgenerator[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Ingress (captured but not selected by any Ingress rule - no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/productcatalogservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/redis-cart[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/cartservice[Deployment] => default/shippingservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => 0.0.0.0-255.255.255.255:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/loadgenerator[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Ingress (captured but not selected by any Ingress rule - no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/checkoutservice[Deployment] => default/redis-cart[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => 0.0.0.0-255.255.255.255:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/cartservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/loadgenerator[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Ingress (captured but not selected by any Ingress rule - no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/productcatalogservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/redis-cart[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/currencyservice[Deployment] => default/shippingservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => 0.0.0.0-255.255.255.255:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/cartservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/currencyservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/loadgenerator[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Ingress (captured but not selected by any Ingress rule - no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/productcatalogservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/redis-cart[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/emailservice[Deployment] => default/shippingservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => 0.0.0.0-255.255.255.255:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/loadgenerator[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Ingress (captured but not selected by any Ingress rule - no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/frontend[Deployment] => default/redis-cart[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/frontend-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => 0.0.0.0-255.255.255.255:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/cartservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/currencyservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/productcatalogservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/redis-cart[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/loadgenerator[Deployment] => default/shippingservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => 0.0.0.0-255.255.255.255:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/cartservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/currencyservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/loadgenerator[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Ingress (captured but not selected by any Ingress rule - no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/productcatalogservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/redis-cart[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/paymentservice[Deployment] => default/shippingservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => 0.0.0.0-255.255.255.255:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/cartservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/currencyservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/loadgenerator[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Ingress (captured but not selected by any Ingress rule - no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/redis-cart[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/productcatalogservice[Deployment] => default/shippingservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => 0.0.0.0-255.255.255.255:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/cartservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/currencyservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/loadgenerator[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Ingress (captured but not selected by any Ingress rule - no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/redis-cart[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/recommendationservice[Deployment] => default/shippingservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Egress (captured but not selected by any Egress rule)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/redis-cart[Deployment] => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/redis-cart[Deployment] => default/cartservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/redis-cart[Deployment] => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/redis-cart[Deployment] => default/currencyservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/redis-cart[Deployment] => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/redis-cart[Deployment] => default/loadgenerator[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Ingress (captured but not selected by any Ingress rule - no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/redis-cart[Deployment] => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/redis-cart[Deployment] => default/productcatalogservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/redis-cart[Deployment] => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/redis-cart[Deployment] => default/shippingservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => 0.0.0.0-255.255.255.255:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/adservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/adservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/cartservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/cartservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/checkoutservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/checkoutservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/currencyservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/currencyservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/emailservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/emailservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/loadgenerator[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/loadgenerator-netpol // Ingress (captured but not selected by any Ingress rule - no rules defined)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/paymentservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/paymentservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/productcatalogservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/productcatalogservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/recommendationservice[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (DENIED)
		1) [NP] default/recommendationservice-netpol // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN default/shippingservice[Deployment] => default/redis-cart[Deployment]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (DENIED)
		1) [NP] default/shippingservice-netpol // Egress (captured but not selected by any Egress rule - no rules defined)
	INGRESS DIRECTION (ALLOWED) due to the system default (Allow all)


#########################################################
# All Connections due to the system default (Allow all) #
#########################################################
0.0.0.0-255.255.255.255 => default/redis-cart[Deployment]
default/redis-cart[Deployment] => 0.0.0.0-255.255.255.255
